--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./app.css">
 </head>
 <body>
+    <h1>Hello Ruben</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, a veritatis quia vero aspernatur, nam molestiae quod dolores, atque dignissimos amet sed ipsa fuga sint? Nulla omnis ipsum voluptate doloribus.</p>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis illo nesciunt, placeat, natus facilis, magnam molestias ex quisquam asperiores in totam! Laborum quibusdam quia fuga iste! Iusto labore tempora ea!</p>
+   <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis illo nesciunt, placeat, natus facilis, magnam molestias ex quisquam asperiores in totam! Laborum quibusdam quia fuga iste! Iusto labore tempora ea!</p> -->
 </body>
 </html>
